--- a/index.css
+++ b/index.css
@@ -11,42 +11,86 @@
 
 .box1 {
   background-color: blue;
-  transition-property: background-color, width;
-  transition-duration: 2s;
-  /* transition-delay: 2s; */
-  transition-timing-function: ease-in;
+  transition-property: background-color, height, width;
+  transition-duration: 1s, 3s, 2s, 4s;
+  transition-delay: 1s, 0.5s;
+  transition-timing-function: ease-in-out;
+  /* transition: background-color 1000ms 1s ease-in-out,; */
+  /* transition: background-color 1000ms 1s ease-in-out,
+    height 1000ms 1s ease-in-out; */
 }
 
 .box1:hover {
   background-color: brown;
-  width: 300px;
-}
-
-.box2 {
-  /* background-color: yellow; */
-  animation-name: loadingDefault;
-  animation-duration: 2s;
-  /*loop animation - number or infinite*/
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-delay: 2s;
+  width: 500px;
+  height: 300px;
 }
 
 @keyframes loadingDefault {
   /* from {
     background-color: yellow;
-  }
-  to {
-    background-color: green;
   } */
-
+  to {
+    background-color: red;
+  }
+  /*
   0% {
     background-color: yellow;
   }
+
   50% {
     background-color: pink;
   }
   100% {
     background-color: green;
+  } */
+}
+
+@keyframes scale {
+  to {
+    width: 800px;
+    height: 500px;
   }
+}
+
+.box2 {
+  background-color: yellow;
+  animation-name: loadingDefault, scale;
+  animation-duration: 2s;
+  /*loop animation - number or infinite*/
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-delay: 1s;
+  /* width: 500px;
+  height: 300px; */
+}
+
+.box2:hover {
+  background-color: pink;
+  width: 500px;
+  height: 300px;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-top: blue solid 5px;
+  border-left: yellow solid 5px;
+  border-right: red solid 5px;
+  border-bottom: green solid 5px;
+  margin-top: 4px;
+  border-radius: 50%;
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  /* animation-direction: alternate; */
+  /* animation-delay: 1s; */
 }
