--- a/css/check.css
+++ b/css/check.css
@@ -19,8 +19,8 @@
 html {
     position: relative;
     background-color: var(--bl);
-    scroll-behavior: smooth;
     font-size: 24px;
+    scroll-behavior: smooth;
     --bl: black;
     --wh: white;
     --gr: grey;
@@ -32,7 +32,7 @@ img {
 
 .navbar__main {
     position: absolute;
-    top: 6.66rem;
+    top: 6.77rem;
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -47,7 +47,7 @@ img {
 
 .navbar__main--link {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 4.88rem;
+    font-size: 4.9rem;
     color: var(--wh);
     text-decoration: none;
 }
@@ -70,7 +70,7 @@ img {
 
 .navbar__sub--link {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 2.88rem;
+    font-size: 2.9rem;
     color: var(--wh);
     text-decoration: none;
 }
@@ -113,7 +113,7 @@ img {
 
 .navbar__main--list:hover .navbar__sub {
     opacity: 1;
-    top: 5.17rem;
+    top: 5.15rem;
     visibility: visible;
 }
 
@@ -136,17 +136,17 @@ img {
 }
 
 .home__block--main-left {
-    width: 1.33%;
+    width: 1.3%;
     order: 1;
 }
 
 .home__block--main-right {
-    width: 1.33%;
+    width: 1.3%;
     order: 3;
 }
 
 .home__block--main-center {
-    width: 97.34%;
+    width: 97.4%;
     order: 2;
 }
 
@@ -157,27 +157,27 @@ img {
 
 .home__block--main-bottom {
     position: relative;
-    top: -0.20rem;
+    top: -0.25rem;
 }
 
 .home__block--content-first {
     position: absolute;
     right: 2.05rem;
-    bottom: 2.15rem;
+    bottom: 2.25rem;
 }
 
 .home__paragraph--content-first {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 4.88rem;
+    font-size: 4.9rem;
     color: var(--wh);
     cursor: pointer;
 }
 
 .home__block--sub {
     position: relative;
-    top: -0.64rem;
+    top: -0.77rem;
     display: grid;
-    grid-template-columns: 1.33% 47.38% 2.58% 47.38% 1.33%;
+    grid-template-columns: 1.3% 47.43% 2.54% 47.43% 1.3%;
 }
 
 .home__block--sub-left {
@@ -209,31 +209,31 @@ img {
     grid-column: 2 / 5;
     grid-row: 2 / 3;
     position: relative;
-    top: -0.24rem;
+    top: -0.25rem;
 }
 
 .home__block--content-second {
     position: absolute;
-    right: 41.41rem;
-    bottom: 2.75rem;
+    right: 41.61rem;
+    bottom: 2.8rem;
 }
 
 .home__block--content-third {
     position: absolute;
     right: 2.05rem;
-    bottom: 2.75rem;
+    bottom: 2.8rem;
 }
 
 .home__paragraph--content-second {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 2.88rem;
+    font-size: 2.9rem;
     color: var(--wh);
     cursor: pointer;
 }
 
 .home__paragraph--content-third {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 2.88rem;
+    font-size: 2.9rem;
     color: var(--wh);
     cursor: pointer;
 }
@@ -279,7 +279,7 @@ img {
     background-size: 100%;
     background-repeat: no-repeat;
     position: relative;
-    top: -1.2rem;
+    top: -1.3rem;
     padding-top: 33.75%;
 }
 
@@ -369,7 +369,26 @@ img {
 
 #footer {
     position: absolute;
-    top: 84.8rem;
+    top: 85.3rem;
 }
 
 /* OK */
+
+.header__pro--banner {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header__pro--banner div {
+    width: 1.25%;
+    height: 1rem;
+}
+
+.header__pro--banner div:nth-child(odd) {
+    background-color: white;
+}
+
+.header__pro--banner div:nth-child(81) {
+    background-color: yellow;
+}
